# CivicLens

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  access_api_data.py  explore api.ipynb  explore regulations API.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: lint-test.yml  push_to_server.yml  python-app.yml  site.yml
architecture/: index.html
civiclens/: manage.py
civiclens/.github/workflows/: python-app.yml
civiclens/collect/: __init__.py  access_api_data.py  add_comments.py  bulk_dl.py  check_doc_status.py  db_init.sql  dockets.csv  move_data_from_api_to_database.py  qa_doc_comment_num.py  upload_bulk_csvs_to_db.py
civiclens/data_engineering/: access_api_data.py  bulk_dl.py  constants.py  db_init.sql  doc_ids_2014.csv  models.py  move_data_from_api_to_database.py  test.py  upload_bulk_csvs_to_db.py
civiclens/deploy/: launch.py  launch_nlp.sh  run_civiclens_nlp.sh
civiclens/nlp/: comments.py  models.py  nlp_testing.ipynb  pipeline.py  titles.py  tools.py  topics.py
civiclens/nlp/saved_models/: stop_words.pickle
civiclens/regulations/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
civiclens/regulations/fixtures/: test_fixture.json
civiclens/regulations/migrations/: 0001_initial.py  0002_alter_dockets_agencyid_alter_dockets_dockettype_and_more.py  0003_alter_documents_title.py  0004_alter_documents_dates.py  0005_alter_publiccomments_posteddate_and_more.py  0006_rename_agencyid_dockets_agency_id_and_more.py  0007_rename_publiccomments_comment_rename_dockets_docket_and_more.py  0008_agencyreference.py  0009_search.py  0010_nlpoutput.py  0010_nlpoutput_delete_search.py  0011_dataqa_remove_nlpoutput_rep_comments_and_more.py  0012_alter_nlpoutput_comments.py  0013_alter_nlpoutput_document.py
civiclens/templates/: 404.html  about.html  comment.html  document.html  home.html  learn.html  search_page.html  search_results.html
civiclens/tests/: conftest.py  qa_doc_comment_num.py  test.db  test_access_api_data.py  test_django.py  test_example.py  test_frontend.py  test_move_data_from_api_to_database.py  test_nlp.py  test_render.py  test_upload_bulk_csvs_to_db.py  test_utils.py  test_views.py
civiclens/utils/: backup_postgres.sh  constants.py  database_access.py  errors.py  ml_utils.py  run_civiclens_nlp.sh  run_civiclens_update.sh  text.py
civiclens/website/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
collect/: index.html
docs/: architecture.md  collect.md  index.md  models.md  nlp.md  reglib.md
docs/endpoints/: about.md  document.md  home.md  learn.md  regulations.md  search.md
endpoints/about/: index.html
endpoints/document/: index.html
endpoints/home/: index.html
endpoints/learn/: index.html
endpoints/search/: index.html
models/: index.html
nlp/: index.html
notebooks/: topic_model.py  topic_modeling.ipynb
search/: search_index.json
tests/: test_access_api_data.py
website/website/: settings.py
(+17 files in other folders)
