[tool.poetry]
name = "civiclens"
version = "0.1.0"
description = "Public Commenting Project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
ipykernel = "^6.29.4"
django = "^5.0.4"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pre-commit = "^3.7.0"
sentence-transformers = "^2.7.0"
networkx = "^3.3"
langchain-community = "^0.0.36"
langchain-core = "^0.1.50"
polars = "^0.20.22"
pandas = "^2.2.2"
pytest-django = "^4.8.0"
langchain = "^0.1.17"
matplotlib = "^3.8.4"
gensim = "^4.3.2"
scipy = "1.12"
transformers = "^4.41.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
