[tool.poetry]
name = "civiclens"
version = "0.1.0"
description = "Public Commenting Project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
ipykernel = "^6.29.4"
django = "^5.0.4"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pre-commit = "^3.7.0"
sentence-transformers = "^2.7.0"
networkx = "^3.3"
langchain-community = "^0.0.36"
langchain-core = "^0.1.50"
polars = "^0.20.22"
pandas = "^2.2.2"
pytest-django = "^4.8.0"
langchain = "^0.1.17"
matplotlib = "^3.8.4"
gensim = "^4.3.2"
scipy = "1.12"
transformers = "^4.41.0"
sentencepiece = "^0.2.0"
pytest-env = "^1.1.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
ipython = "^8.23.0"
mkdocs-material-extensions = "^1.3.1"
mkdocs-autorefs = "^1.0.1"
mkdocs-table-reader-plugin = "^2.1.0"
mkdocs-material = "^9.5.18"
mkdocstrings = "^0.24.3"
mkdocstrings-python = "^1.10.0"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
    "D:DATABASE_TEST=True"
]
